# AuraRetailOS-ModularKioskSystem

./: README.md
AuraRetailOs/: CMakeLists.txt  aura_sim  main.cpp
AuraRetailOs/data/: inventory.json  transactions.csv
AuraRetailOs/gui/: diagnosisdialog.cpp  diagnosisdialog.h  mainWindow.cpp  mainWindow.h  mainWindow.ui
AuraRetailOs/include/command/: InventoryMemento.h  InvertoryMemento.h  PurchaseItemCommand.h  RefundCommand.h  RestockCommand.h
AuraRetailOs/include/core/: CentralRegistry.h  Kiosk.h  KioskInterface.h  diagnosisservice.h
AuraRetailOs/include/factory/: FoodFactory.h  KioskFactory.h  KioskFactorySimple.h  PharmacyFactory.h
AuraRetailOs/include/hardware/: Dispenser.h  NetworkModule.h  RoboticArmDispenser.h  SpiralDispenser.h
AuraRetailOs/include/inventory/: Inventory.h  InventoryProxy.h  Item.h  Product.h  RealInventory.h
AuraRetailOs/include/payment/: CardAdapter.h  Payment.h  UPIAdapter.h  UserWallet.h  WalletAdapter.h
AuraRetailOs/include/persistence/: TransactionLog.h
AuraRetailOs/include/pricing/: DiscountPricing.h  PricingPolicy.h  StandardPricing.h
AuraRetailOs/src/: main.cpp
AuraRetailOs/src/command/: PurchaseItemCommand.cpp  RefundCommand.cpp  RestockCommand.cpp
AuraRetailOs/src/core/: CentralRegistry.cpp  Kiosk.cpp  KioskBuilder.cpp  diagnosisservice.cpp
AuraRetailOs/src/factory/: EmergencyFactory.cpp  FoodFactory.cpp  KioskFactorySimple.cpp
AuraRetailOs/src/hardware/: NetworkModule.cpp  RoboticArmDispenser.cpp  SolarModule.cpp  SpiralDispenser.cpp
AuraRetailOs/src/inventory/: InventoryProxy.cpp  Product.cpp  (+1 more)
(+10 files in other folders)
